# python-template-cpp

./: .buildinfo  .copier-answers.yaml  .copier-answers.yml  .gitignore  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/python_template_cpp/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/docs/wiki/: Installation.doctree  _Footer.doctree  _Sidebar.doctree
.doctrees/docs/wiki/contribute/: Build-from-Source.doctree  Contribute.doctree  Local-Development-Setup.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  docs.yaml
_modules/: index.html  python_template_cpp.html
_sources/: index.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/python_template_cpp/: index.rst.txt
_sources/autoapi/test_all/: index.rst.txt
_sources/docs/wiki/: Installation.md.txt
_sources/docs/wiki/contribute/: Build-from-Source.md.txt
autoapi/: index.html
autoapi/python_template_cpp/: index.html
autoapi/test_all/: index.html
cpp/cpp-template/: extension.cpp
cpp/python-template-cpp/: extension.cpp
docs/wiki/: Installation.html  Installation.md  _Footer.html  _Footer.md  _Sidebar.html
docs/wiki/contribute/: Build-from-Source.html  Contribute.html  Contribute.md  Local-Development-Setup.html  Local-Development-Setup.md
python_template_cpp/tests/: test_all.py
